fix: set sidebar lower in z-index
- sidebar was on top of the settings modal

--- a/sample-apps/react/react-dogfood/style/layout.scss
+++ b/sample-apps/react/react-dogfood/style/layout.scss
@@ -16,7 +16,7 @@
 
 .rd__sidebar {
   position: absolute;
-  z-index: 2;
+  z-index: 1;
   left: 0;
   bottom: 0;
   display: flex;
